--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lodash.uniq": "^4.5.0",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-range": "^1.8.12"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
